feat: Added endpoints. feat: Added support file struct.go. fix: Added address to nginx.conf with product service. docs: Added some endpoints to openapi.yaml.
